--- a/Main/Kreisflaeche/style.css
+++ b/Main/Kreisflaeche/style.css
@@ -1,3 +1,16 @@
+/* Füge das ganz oben in dein CSS hinzu */
+* {
+    box-sizing: border-box;
+}
+
+/* Und das für konsistente Darstellung */
+button, input, select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+
 body{
     margin: 50px;
     font-family: Arial, sans-serif;
