--- a/Main/Umrechnen/Laengenmaße/style.css
+++ b/Main/Umrechnen/Laengenmaße/style.css
@@ -15,6 +15,13 @@ body {
     font-family: Verdana, Tahoma, sans-serif;
     text-align: center;
 }
+
+a {
+    text-decoration: none;
+    color: green;
+    cursor: pointer;
+}
+
 select {
     width: 200px;
     padding: 5px;
