--- a/Main/Kreisflaeche/style.css
+++ b/Main/Kreisflaeche/style.css
@@ -38,6 +38,7 @@ button{
     padding: 10px 20px;
     background-color: #414d42;
     border: none;
+    color: white;
     cursor: pointer;
     font-size: 16px;
     border-radius: 10px;
